chore: add documentation